@@ -483,7 +483,7 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <configuration combine.children="append">
-                        <argLine>-Xmx2g -Xms2g</argLine>
+                        <argLine>-Xmx2g -Xms2g -XX:MaxPermSize=512m</argLine>
                     </configuration>
                 </plugin>
 
